--- a/Cargo.toml
+++ b/Cargo.toml
@@ -125,10 +125,6 @@ features = ["nightly", "push", "process"]
 git = "https://github.com/pingcap/rust-prometheus.git"
 rev = "b668f3911d6569de2e1e8b2672fccec1cc8298be"
 
-[dev-dependencies]
-panic_hook = { path = "components/panic_hook" }
-test_sst_importer = { path = "components/test_sst_importer" }
-
 [replace]
 # TODO: remove this when new raft-rs is published.
 "raft:0.6.0-alpha" = { git = "https://github.com/pingcap/raft-rs", branch = "master", default-features = false }
@@ -136,6 +132,26 @@ test_sst_importer = { path = "components/test_sst_importer" }
 "protobuf:2.8.0" = { git = "https://github.com/nrc/rust-protobuf", branch = "v2.8" }
 "protobuf-codegen:2.8.0" = { git = "https://github.com/nrc/rust-protobuf", branch = "v2.8" }
 "prost:0.5.0" = { git = "https://github.com/danburkert/prost", rev = "1944c27c3029d01ff216e7b126d846b6cf8c7d77" }
+# TODO: remove this when https://github.com/tikv/protobuf-build/pull/30 get merged
+"protobuf-build:0.10.0" = { git = "https://github.com/tennix/protobuf-build", branch = "use-system-protoc" }
+
+[dev-dependencies]
+# See https://bheisler.github.io/criterion.rs/book/user_guide/known_limitations.html for the usage
+# of `real_blackbox` feature.
+criterion = "0.3"
+criterion-cpu-time = "0.1"
+arrow = "0.10.0"
+rand_xorshift = "0.1"
+
+profiler = { path = "components/profiler" }
+panic_hook = { path = "components/panic_hook" }
+tipb_helper = { path = "components/tipb_helper" }
+tidb_query_datatype = { path = "components/tidb_query_datatype" }
+test_util = { path = "components/test_util" }
+test_raftstore = { path = "components/test_raftstore" }
+test_storage = { path = "components/test_storage" }
+test_coprocessor = { path = "components/test_coprocessor" }
+test_sst_importer = { path = "components/test_sst_importer" }
 
 [target.'cfg(unix)'.dependencies]
 signal = "0.6"
