--- a/components/external_storage/Cargo.toml
+++ b/components/external_storage/Cargo.toml
@@ -4,6 +4,13 @@ version = "0.0.1"
 edition = "2018"
 publish = false
 
+[[example]]
+name = "scli"
+required-features = ["s3"]
+
+[features]
+s3 = ["rusoto_core", "rusoto_s3", "rusoto_credential"]
+
 [dependencies]
 rand = "0.7"
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
@@ -12,3 +19,10 @@ slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global
 tempfile = "3.0"
 tikv_alloc = { path = "../tikv_alloc", default-features = false }
 url = "2.0"
+rusoto_core = { version = "0.40.0", optional = true }
+rusoto_s3 = { version = "0.40.0", optional = true }
+rusoto_credential = { version = "0.40.0", optional = true }
+
+[dev-dependencies]
+rusoto_mock = "0.40.0"
+clap = { version = "2.32", features = ["yaml"] }
